Fixed bug where image disappeared when you removed an inkling. Fixed bug where search suggestions showed up too high.

--- a/finalProject/inkle/static/css/suggestions.css
+++ b/finalProject/inkle/static/css/suggestions.css
@@ -1,4 +1,3 @@
-
 .suggestions
 {
     border: solid 1px #919191;
@@ -8,6 +7,7 @@
     display: none;
     z-index: 2;
     position: absolute;
+    top: 65px;
 }
 
 .suggestion
